test/wasm_test_suite.expected
==== core/elem.wast ====
File "wasm-test-suite/core/elem.wast", line 1061, characters 25-26:
Error: The type index 0 is not bound.
1060 │   (func (export "call_in_table") (param i32) (result i32)
1061 │     (call_indirect (type 0) (local.get 0)))
                                ^
==== core/exceptions/tag.wast ====
Validation should have failed (non-empty tag result type):
  (module (tag (result i32)))
Validation should have failed (non-empty tag result type):
  (module (import "" "" (tag (result i32))))
Validation should have failed (non-empty tag result type):
  (module (tag (result i32)))
Validation should have failed (non-empty tag result type):
  (module (import "" "" (tag (result i32))))
==== core/func.wast ====
Fatal error: exception File "src/lib-wasm/text_to_binary.ml", line 607, characters 28-34: Assertion failed
==== core/stack.wast ====
Fatal error: exception Invalid_argument("index out of bounds")
